Modidificaciones a new-user, welcome y login

--- a/src/app/components/new-user/new-user.component.html
+++ b/src/app/components/new-user/new-user.component.html
@@ -2,15 +2,37 @@
 <div class="pt-3">
   <h2 class="mb-2 text-center">New User</h2>
 
+  <div class="container d-flex justify-content-end">
+    
+    <a  class="btn btn-danger" href="/welcome"><i class="bi bi-arrow-left-circle"></i> Regresar</a>
+  </div>
+
+
+
   <form [formGroup]="newUserForm" (ngSubmit)="newUser()" id="newUserForm"
   class="container pb-2" style="width: 400px; max-width: 100%; ">
     
     <div class="mb-3">
       <label for="user" class="form-label">User</label>
-      <input formControlName="user" required 
+      <input formControlName="user" required autocomplete="off"
         type="text" class="form-control" id="user">
-      <div class="validacion" *ngIf="newUserForm.get('user')?.hasError('required') &&  newUserForm.get('user')?.touched" >Usuario obligatorio</div>
+    <div class="validacion" *ngIf="newUserForm.get('user')?.hasError('required') &&  newUserForm.get('user')?.touched" >Usuario obligatorio</div>
       
+    <div class="mb-3">
+      <label for="name" class="form-label">User Name</label>
+      <input formControlName="name" required autocomplete="off"
+        type="text" class="form-control" id="name">
+      <div class="validacion" *ngIf="newUserForm.get('name')?.hasError('required') &&  newUserForm.get('name')?.touched" >Nombre de usuario obligatorio</div>
+      
+    </div>
+
+    <div class="mb-3">
+      <label for="last_name" class="form-label">Last name</label>
+      <input formControlName="last_name" required autocomplete="off"
+        type="text" class="form-control" id="last_name">
+      <div class="validacion" *ngIf="newUserForm.get('last_name')?.hasError('required') &&  newUserForm.get('last_name')?.touched" >Apellido obligatorio</div>
+      
+    </div>
     </div>
     <div class="mb-3">
       <label for="password" class="form-label">Password</label>
@@ -18,20 +40,8 @@
         type="password" class="form-control" id="password">
       <div class="validacion" *ngIf="newUserForm.get('password')?.hasError('required') &&  newUserForm.get('password')?.touched" >Clave obligatorio</div>
     </div>
-    <div class="mb-3">
-      <label for="name" class="form-label">User Name</label>
-      <input formControlName="name" required
-        type="text" class="form-control" id="name">
-      <div class="validacion" *ngIf="newUserForm.get('name')?.hasError('required') &&  newUserForm.get('name')?.touched" >Nombre de usuario obligatorio</div>
-      
-    </div>
-    <div class="mb-3">
-      <label for="last_name" class="form-label">Last name</label>
-      <input formControlName="last_name" required
-        type="text" class="form-control" id="last_name">
-      <div class="validacion" *ngIf="newUserForm.get('last_name')?.hasError('required') &&  newUserForm.get('last_name')?.touched" >Apellido obligatorio</div>
-      
-    </div>
+    
+    
 
     <div class="mb-3">
       <label for="type_user" class="form-label">TypeUser</label>
@@ -48,10 +58,10 @@
 
     </div>
   
-    <div class="container d-flex justify-content-between">
-      <button type="submit"  class="btn btn-primary" [disabled]="newUserForm.invalid">Registrar</button>
+    <div class="d-flex justify-content-end">
+      <!-- <a  class="btn btn-primary" href="/welcome">Regresar</a> -->
+      <button type="submit"  class="btn btn-primary d-flex gap-2" [disabled]="newUserForm.invalid"><i class="bi bi-person-plus"></i>Registrar</button>
   
-      <a  class="btn btn-primary" href="/welcome">Regresar</a>
 
     </div>
   </form>
