--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -3,7 +3,7 @@
     
     <div class="container d-flex justify-content-between align-items-center my-5">
         <h2>Users</h2>
-        <a class="btn btn-primary" href="/new-user" >New User</a>
+        <a class="btn btn-primary" href="/new-user" ><i class="bi bi-person-plus"></i> Nuevo Usuario</a>
 
 
     </div>
